# Django-Docker

./: pyproject.toml
backend/py_client/: basic.py  create.py
