[tool.poetry]
name = "django-docker"
version = "0.1.0"
description = ""
authors = ["Ismael"]
readme = "README.md"
packages = [{include = "django_docker"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
djangorestframework = "^3.14.0"
pyyaml = "^6.0"
requests = "^2.28.2"
django-cors-headers = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
